--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Release Charts
 
-on:
-  push:
-    branches:
-      - main
+trigger:
+  batch: true
+  branches:
+    include:
+    - main
 
 jobs:
   release:
