--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Release Charts
 
-trigger:
-  batch: true
-  branches:
-    include:
-    - main
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   release:
