--- a/charts/helloacrtasks/Chart.yaml
+++ b/charts/helloacrtasks/Chart.yaml
@@ -22,3 +22,5 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: v1
+
+# force github releaseer to be initiated by this change !
