--- a/charts/helloacrtasks/values.yaml
+++ b/charts/helloacrtasks/values.yaml
@@ -1,4 +1,4 @@
-# Default values for azure-vote-front.
+# Default values for helloacrtasks.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
