--- a/charts/helloacrtasks/values.yaml
+++ b/charts/helloacrtasks/values.yaml
@@ -8,9 +8,21 @@ backendName: helloacrtasks-master
 image:
   repository: aappweuacroh7rkwx7k34t7.azurecr.io/helloacrtasks
   pullPolicy: IfNotPresent
-  tag: "v1"
-...
+  tag: ""
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: false
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
 service:
   type: LoadBalancer
-  port: 80
-...
+  port: 80  
