set image repo without acr path (needs to come from values.yaml. Version 0.1.8)

--- a/charts/helloacrtasks/values.yaml
+++ b/charts/helloacrtasks/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 backendName: helloacrtasks-master
 
 image:
-  repository: aappweuacroh7rkwx7k34t7.azurecr.io/helloacrtasks
+  repository: aapp/helloacrtasks
   pullPolicy: IfNotPresent
   tag: ""
 
