--- a/charts/irma/Chart.yaml
+++ b/charts/irma/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: irma
-description: A Helm chart for Kubernetes
+description: A Helm chart for deploying irma server
 
 # A chart can be either an 'application' or a 'library' chart.
 #
